# glibc_musl_version

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
examples/: print_libc.rs
src/: detect.rs  detect_linux.rs  detect_other.rs  lib.rs  types.rs
